--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
@@ -21,9 +22,9 @@
         }
         .header {
             font-size: 24px;
+            font-weight: bold;
             margin-bottom: 20px;
             color: #333333;
-            font-weight: bold;
         }
         .topic-list {
             list-style: none;
