--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script>
         const questions = [
             "전공소개 해 주세요", "그 전공을 왜 선택했나요?", "승무원과 전공에는 어떤 연관이 있나요?", "본인이 승무원이 된다면, 해당 전공이 어떻게 도움이 된다고 생각하나요?",
-            "전공을 살리지 않는 이유는 뭔가요? (항공과 답변x)", "본인이 항공과라면, 어떻게 승무원에 기여할 수 있나요? (비항공과 답변x)", "휴학 / 졸업 후 공백기가 있네요? 이 때 뭐했나요?",
+            "전공을 살리지 않는 이유는 뭔가요?", "본인이 항공과라면, 어떻게 승무원에 기여할 수 있나요?", "휴학 / 졸업 후 공백기가 있네요? 이 때 뭐했나요?",
             "대학 생활 중에 가장 기억에 남는 활동은 어떤게 있나요?", "지금까지 살면서 후회되는 점은 이야기 해주세요.", "지금 일을 한다면 무엇을 하고, 그걸 왜 관두려고 하는지",
             "서비스 경험을 하면서 힘들었던 점 이야기 해주세요.", "본인이 다른 지원자보다 이것만큼은 잘한다. 강점이다. 하는 것 이야기해주세요.", "본인의 성격에 대해 이야기 해주세요.",
             "본인의 단점은 뭔가요?", "승무원에 치명적인 본인의 단점에 대해 이야기 해주세요.", "언제 가장 스트레스를 받나요?", "스트레스를 받으면 어떻게 해소하나요?",
