--- a/index.html
+++ b/index.html
@@ -8,31 +8,33 @@
         body { font-family: Arial, sans-serif; text-align: center; background-color: #f8f9fa; }
         .container { margin: 50px auto; padding: 20px; background: white; border-radius: 10px; width: 50%; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
         .btn { display: block; width: 80%; margin: 10px auto; padding: 10px; font-size: 18px; border: none; border-radius: 5px; cursor: pointer; }
-        .blue-btn { background-color: #007bff; color: white; }
-        .blue-btn:hover { background-color: #0056b3; }
+        .purple-btn { background-color: #9370DB; color: white; }
+        .purple-btn:hover { background-color: #7B68EE; }
         .hidden { display: none; }
         #timer { font-size: 20px; font-weight: bold; margin-top: 10px; }
+        .copyright { font-size: 14px; color: gray; margin-top: 10px; }
     </style>
 </head>
 <body>
     <div class="container" id="mainPage">
         <h2>국내항공사 면접 순발력 키우기</h2>
-        <button class="btn blue-btn" onclick="startQuiz()">1. 필수 기출 문제</button>
-        <button class="btn blue-btn">2. 돌발질문</button>
-        <button class="btn blue-btn">3. 시사문제</button>
+        <p class="copyright">Platinum Crew</p>
+        <button class="btn purple-btn" onclick="startQuiz()">1. 필수 기출 문제</button>
+        <button class="btn purple-btn">2. 돌발질문</button>
+        <button class="btn purple-btn">3. 시사문제</button>
     </div>
 
     <div class="container hidden" id="quizPage">
         <h2 id="question"></h2>
         <div id="timer">남은 시간: 120초</div>
-        <button class="btn blue-btn hidden" id="nextBtn" onclick="nextQuestion()">다음 질문</button>
-        <button class="btn blue-btn hidden" id="returnBtn" onclick="returnToMain()">메인 페이지로 돌아가기</button>
+        <button class="btn purple-btn hidden" id="nextBtn" onclick="nextQuestion()">다음 질문</button>
+        <button class="btn purple-btn hidden" id="returnBtn" onclick="returnToMain()">메인 페이지로 돌아가기</button>
     </div>
 
     <script>
         const questions = [
             "전공소개 해 주세요", "전공을 왜 선택했나요?", "승무원과 전공에는 어떤 연관이 있나요?", "본인이 승무원이 된다면, 해당 전공이 어떻게 도움이 된다고 생각하나요?",
-            "전공을 살리지 않는 이유는 뭔가요?", "본인의 전공이 어떻게 승무원에 기여할 수 있나요?", "휴학 / 졸업 후 공백기가 있네요? 이 때 뭐했나요?",
+            "전공을 살리지 않는 이유는 뭔가요?", "휴학 / 졸업 후 공백기가 있네요? 이 때 뭐했나요?",
             "대학 생활 중에 가장 기억에 남는 활동은 어떤게 있나요?", "지금까지 살면서 후회되는 점은 이야기 해주세요.", "지금 일을 한다면 무엇을 하고, 그걸 왜 관두려고 하는지",
             "서비스 경험을 하면서 힘들었던 점 이야기 해주세요.", "본인이 다른 지원자보다 이것만큼은 잘한다. 강점이다. 하는 것 이야기해주세요.", "본인의 성격에 대해 이야기 해주세요.",
             "본인의 단점은 뭔가요?", "승무원에 치명적인 본인의 단점에 대해 이야기 해주세요.", "언제 가장 스트레스를 받나요?", "스트레스를 받으면 어떻게 해소하나요?",
@@ -70,24 +72,6 @@
                 document.getElementById('nextBtn').classList.add('hidden');
                 document.getElementById('returnBtn').classList.remove('hidden');
             }
-        }
-
-        function startTimer() {
-            let timeLeft = 120;
-            document.getElementById('timer').innerText = `남은 시간: ${timeLeft}초`;
-            timer = setInterval(() => {
-                timeLeft--;
-                document.getElementById('timer').innerText = `남은 시간: ${timeLeft}초`;
-                if (timeLeft <= 0) {
-                    clearInterval(timer);
-                    document.getElementById('nextBtn').classList.remove('hidden');
-                }
-            }, 1000);
-        }
-
-        function nextQuestion() {
-            currentQuestionIndex++;
-            showQuestion();
         }
 
         function returnToMain() {
