--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <button class="btn purple-btn" onclick="startQuiz()">1. 필수 기출 문제</button>
         <button class="btn purple-btn">2. 돌발질문</button>
         <button class="btn purple-btn">3. 시사문제</button>
+        <button class="btn purple-btn">4. 롤플레잉</button>
     </div>
 
     <div class="container hidden" id="quizPage">
