--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <h2>국내항공사 면접 순발력 키우기</h2>
         <p class="copyright">Platinum Crew</p>
         <button class="btn purple-btn" onclick="startQuiz()">1. 필수 기출 문제</button>
-        <button class="btn purple-btn">2. 돌발질문</button>
-        <button class="btn purple-btn">3. 시사문제</button>
-        <button class="btn purple-btn">4. 롤플레잉</button>
+        <button class="btn purple-btn" onclick="startQuiz()">2. 돌발질문</button>
+        <button class="btn purple-btn" onclick="startQuiz()">3. 시사문제</button>
+        <button class="btn purple-btn" onclick="startQuiz()">4. 롤플레잉</button>
     </div>
 
     <div class="container hidden" id="quizPage">
@@ -32,24 +32,49 @@
         <button class="btn purple-btn hidden" id="returnBtn" onclick="returnToMain()">메인 페이지로 돌아가기</button>
     </div>
 
-    <script>
-        const questions = [
-            "전공소개 해 주세요", "전공을 왜 선택했나요?", "승무원과 전공에는 어떤 연관이 있나요?", "본인이 승무원이 된다면, 해당 전공이 어떻게 도움이 된다고 생각하나요?",
-            "전공을 살리지 않는 이유는 뭔가요?", "휴학 / 졸업 후 공백기가 있네요? 이 때 뭐했나요?",
-            "대학 생활 중에 가장 기억에 남는 활동은 어떤게 있나요?", "지금까지 살면서 후회되는 점은 이야기 해주세요.", "지금 일을 한다면 무엇을 하고, 그걸 왜 관두려고 하는지",
-            "서비스 경험을 하면서 힘들었던 점 이야기 해주세요.", "본인이 다른 지원자보다 이것만큼은 잘한다. 강점이다. 하는 것 이야기해주세요.", "본인의 성격에 대해 이야기 해주세요.",
-            "본인의 단점은 뭔가요?", "승무원에 치명적인 본인의 단점에 대해 이야기 해주세요.", "언제 가장 스트레스를 받나요?", "스트레스를 받으면 어떻게 해소하나요?",
-            "여가시간에 주로 뭐하세요?", "승무원이 되면 체력적으로 힘들텐데, 체력관리 어떻게 하나요?", "롤모델이 누군가요?", "승무원이 되기 위해서 어떤 노력을 했나요?",
-            "첫지원자라면 승무원 준비는 어떻게 했나요?", "재지원자라면 왜 떨어진 것 같나요? 그리고 어떤 점이 달라져서 왔나요?", "서비스란 뭐라고 생각하세요?",
-            "승무원은 어떤 일을 하는 사람인가요?", "승무원이 되면 어떤 승무원이 되고 싶으세요?", "승무원이 되면 어떤 장점이 있을까요?", "승무원이 되면 어떤 단점이 있을까요?",
-            "승무원에게 이것만큼은 꼭 필요하다! 하는 자질/역량은 어떤게 있나요?", "본인이 가진 승무원의 자질 하나 이야기 해주세요.", "승무원으로 일할 때 생각과 다르게 너무 힘들면 어떻게 극복할 건가요?",
-            "본인의 직업관에 대해 말해주세요.", "내가 받아봤던 최고의 서비스 이야기 해주세요.", "내가 받아봤던 최악의 서비스 이야기 해주세요.", "다른 항공사 지원해본적 있나요? 지원해봤으면 왜 우리회사에 오려고 하는지?",
-            "자기소개 해주세요.", "자기소개 + 지원동기 합쳐서 1분안에 말해주세요.", "자신을 한단어로 소개해주세요.", "자신을 색깔에 비유해서 설명해주세요.", "왜 승무원이 되고 싶나요?",
-            "왜 우리 항공사에서 일하고 싶은지?", "우리항공사만의 장점이 뭐라고 생각하세요?", "우리항공사가 가진 단점은 뭘까요? 그러면 그걸 어떻게 개선해야 할지도 말해주세요.",
-            "우리 항공사에 추천하고 싶은 신규 취항지와 그 이유를 말해주세요.", "우리 항공사에 추천하고 싶은 신규 기내서비스 추천해주세요.", "우리 항공사에 추천하고 싶은 신규 기내식 추천해주세요.",
-            "우리 항공사의 모델을 새롭게 뽑는다면 누구를 추천하고 싶은지?", "우리항공사 최근 기사 이야기 해주세요.", "우리회사에 대해 아는 것 하나씩 말해보세요.", "우리 항공사 하면 떠오르는 이미지 이야기 해주세요.",
-            "우리 항공사는 이런 색깔이다. 하는 것 이야기 해주세요.", "우리 항공사 서비스 중 가장 해보고 싶은 것은?", "우리 항공사 유니폼에 대해 어떻게 생각하는지?"
-        ];
+   <script>
+        const questionCategories = {
+            1: [
+                "전공소개 해 주세요", "전공을 왜 선택했나요?", "승무원과 전공에는 어떤 연관이 있나요?", "본인이 승무원이 된다면, 해당 전공이 어떻게 도움이 된다고 생각하나요?",
+                "전공을 살리지 않는 이유는 뭔가요?", "휴학 / 졸업 후 공백기가 있네요? 이 때 뭐했나요?",
+                "대학 생활 중에 가장 기억에 남는 활동은 어떤게 있나요?", "지금까지 살면서 후회되는 점은 이야기 해주세요.", "지금 일을 한다면 무엇을 하고, 그걸 왜 관두려고 하는지",
+                "서비스 경험을 하면서 힘들었던 점 이야기 해주세요.", "본인이 다른 지원자보다 이것만큼은 잘한다. 강점이다. 하는 것 이야기해주세요.", "본인의 성격에 대해 이야기 해주세요.",
+                "본인의 단점은 뭔가요?", "승무원에 치명적인 본인의 단점에 대해 이야기 해주세요.", "언제 가장 스트레스를 받나요?", "스트레스를 받으면 어떻게 해소하나요?",
+                "여가시간에 주로 뭐하세요?", "승무원이 되면 체력적으로 힘들텐데, 체력관리 어떻게 하나요?", "롤모델이 누군가요?", "승무원이 되기 위해서 어떤 노력을 했나요?",
+                "첫지원자라면 승무원 준비는 어떻게 했나요?", "재지원자라면 왜 떨어진 것 같나요? 그리고 어떤 점이 달라져서 왔나요?", "서비스란 뭐라고 생각하세요?",
+                "승무원은 어떤 일을 하는 사람인가요?", "승무원이 되면 어떤 승무원이 되고 싶으세요?", "승무원이 되면 어떤 장점이 있을까요?", "승무원이 되면 어떤 단점이 있을까요?",
+                "승무원에게 이것만큼은 꼭 필요하다! 하는 자질/역량은 어떤게 있나요?", "본인이 가진 승무원의 자질 하나 이야기 해주세요.", "승무원으로 일할 때 생각과 다르게 너무 힘들면 어떻게 극복할 건가요?",
+                "본인의 직업관에 대해 말해주세요.", "내가 받아봤던 최고의 서비스 이야기 해주세요.", "내가 받아봤던 최악의 서비스 이야기 해주세요.", "다른 항공사 지원해본적 있나요? 지원해봤으면 왜 우리회사에 오려고 하는지?",
+                "자기소개 해주세요.", "자기소개 + 지원동기 합쳐서 1분안에 말해주세요.", "자신을 한단어로 소개해주세요.", "자신을 색깔에 비유해서 설명해주세요.", "왜 승무원이 되고 싶나요?",
+                "왜 우리 항공사에서 일하고 싶은지?", "우리항공사만의 장점이 뭐라고 생각하세요?", "우리항공사가 가진 단점은 뭘까요? 그러면 그걸 어떻게 개선해야 할지도 말해주세요.",
+                "우리 항공사에 추천하고 싶은 신규 취항지와 그 이유를 말해주세요.", "우리 항공사에 추천하고 싶은 신규 기내서비스 추천해주세요.", "우리 항공사에 추천하고 싶은 신규 기내식 추천해주세요.",
+                "우리 항공사의 모델을 새롭게 뽑는다면 누구를 추천하고 싶은지?", "우리항공사 최근 기사 이야기 해주세요.", "우리회사에 대해 아는 것 하나씩 말해보세요.", "우리 항공사 하면 떠오르는 이미지 이야기 해주세요.",
+                "우리 항공사는 이런 색깔이다. 하는 것 이야기 해주세요.", "우리 항공사 서비스 중 가장 해보고 싶은 것은?", "우리 항공사 유니폼에 대해 어떻게 생각하는지?"
+            ],
+            2: [
+                "역지사지에 대해 이야기 해보세요", "가장 자신있는 집안일과 노하우", "오늘 집에서 나오는 순간까지 '아..나 이거 부족한데 괜찮을까?' 했던 것에 대해 이야기 해보기", 
+                "잘하는 요리 하나 말하고 비법 말해보기", "요즘 혁신적인 상품들이 많이 나오고 있는데, 처음보고 정말 신기하고 놀라웠던 제품 아무거나 하나 말해보기",
+                "약속이 있어서 나갔는데 흰 옷에 얼룩이 묻으면 어떻게 할 것인지?", "나의 미래의 시부모님에게 이것만큼은 들키고 싶지 않다 생각하는 것은?",
+                "요즘 20대들이 만나면 대화의 화두는 무엇인지?", "메이크업 어디서 받았는지?", "본인을 색깔에 비유한다면?", "최근 읽은 기사 1분브리핑 ( 항공사관련/정치제외 )",
+                "본인을 색깔에 비유한다면?", "본인을 동물에 비유한다면?", "자신이 좋아하는 커피와 이유 말해보기", "지금 이곳이 면접장이 아닌 카페라고 상상하고 본인이 무엇을 어떻게 하고 있을 것 같은지 상상해서 묘사해보기",
+                "사회생활을 하면서 가장 중요하다고 생각하는 가치", "어제 뭐했는지?", "최근에 꾼 꿈 중에 기분 좋았던 꿈", "곧 크리스마스인데 가장 기억에 남는 선물",
+                "휴가 3일동안 300만원이 주어진다면 무엇을 할건지", "본인이 쓰는 향수에 대해 이야기해보기", "용돈은 한달에 얼마나 받고 주로 어디에 쓰는지", "20년 뒤에도 승무원이라는 직업이 유망할 것 같은지",
+                "자신의 컴플렉스 이야기 해보기", "끝나고 뭐먹을건지", "요즘 TV 프로그램 뭐보는지", "나의 삶의 핵심가치는?", "남자들의 화장에 대한 본인의 생각",
+                "자신을 꽃에 비유한다면?", "기념하고 있는 기념일", "용기란 무엇인지", "합격하면 누구에게 가장 먼저 알릴 것인지", "살면서 했던 도전 중 가장 큰 도전이었던 것은?",
+                "살면서 했던 가장 큰 일탈에 대해 이야기 해주세요.", "정말 하기 싫은 일이 있을 때 어떻게 하는지?", "나에게 영상편지를 쓴다고 생각하고 자신에게 하고 싶은 말 해보기",
+                "승무원이 되어서 일하는데 왜 대형항공사 안가고, 저비용항공사에 왔냐고 물어보면 어떻게 반응할건지?", "좋은회사란?", "좋은 항공사란?", "입사해서 가장 걱정되는 것이 무엇인지?",
+                "지금 심정을 음악으로 표현하면 어떤 노래인가요?", "자존감과 자존심의 차이점은 무엇일까요?", "찐만두와 군만두 중 어떤 걸 더 좋아하는지?", "100억 로또에 당첨된다면 어떻게 쓸 건가요?",
+                "라면을 끓이는 본인만의 노하우가 있다면 무엇인가요?", "기내에서 가장 청결해야 하는 공간은 어디라고 생각하나요?", "본인만의 장보기 노하우가 있다면 무엇인가요?", "대청소를 할 때 계획이나 순서가 있나요?",
+                "집안일을 돈으로 환산하면 얼마라고 생각하나요?", "승무원 과외나 학원이 도움이 된다고 생각하나요?", "사람을 등급으로 나눌수 있을까요? 그렇다면 어떤 방식으로 나눌 수 있나요?",
+                "지금 떠오르는 사자성어가 있다면 무엇인가요?", "의무를 다 하지 않는 사람에게 권리를 줘도 될까요?", "쇼핑할 때 본인만의 기준이 있다면 무엇인가요?", "비헹기표는 주로 어디에서 사나요?",
+                "더위와 추위 중 무엇을 더 좋아하나요?", "줄임말 아는거 알려주고, 그런 줄임말을 쓰는 것에 대해 어떻게 생각하는지?", "과정과 결과 중 무엇이 더 중요하다고 생각하나요?",
+                "지금 면접장을 사자성어로 표현해주세요", "무인도에 가지고 가고 싶은 3가지와 그 이유는?", "좋아하는 속담과 그이유", "면접보러 오면서 무슨 생각했는지 간단히 말해보기",
+                "15층에 거주하시는 할머니 한분이 엘리베이터 고장으로 올라가지 못하고 계실때 어떻게 대처할 건지", "나를 사물로 표현한다면?", "이것 만큼은 용서가 안된다 하는 것이 있다면?",
+                "소확행 이야기 해보기", "힘든일이 있으면 누구에게 의지하는 편인지?", "대통령이 된다면 어떤 공약을 걸건지", "아프리카에서 모피를 파는 방법",
+                "좋아하는 집안일과 싫어하는 집안일은?", "구독중인 유튜브채널은?", "남승무원과 여승무원의 차이는?", "호감가지 않는 이성이 계속 다가오면 어떻게 할건지?",
+                "웃긴 이야기 하나씩 해주세요", "이순신과 세종대왕의 리더십 차이는 무엇이라고 생각하나요?"
+            ]
+        };
 
         let selectedQuestions = [];
         let currentQuestionIndex = 0;
